Moved logic from CrashedIntoItselfRule to Snake and CrashedIntoItselfCheck